--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
   },
   "devDependencies": {
     "@slicemachine/adapter-next": "^0.3.38",
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20.11.27",
-    "@types/react": "^18.2.65",
+    "@types/react": "^18.3.18",
     "@types/react-dom": "^18.2.22",
     "autoprefixer": "^10.4.19",
     "concurrently": "^8.2.2",
@@ -36,7 +37,7 @@
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "slice-machine-ui": "^1.26.0",
+    "slice-machine-ui": "^2.12.3",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.2"
   }
